tests/format/misc/errors/js/no-for-in-init-concise-binary-in.js
// https://github.com/babel/babel/pull/11931

for (() => x in y;;);
